# rustful-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.example.toml
migrations/: 20240622032904_create_articles_table.down.sql  20240622032904_create_articles_table.up.sql
rustfulkit/: Cargo.toml
rustfulkit/examples/: tinytemplate.rs
rustfulkit/src/: main.rs  template.rs
rustfulkit/src/template/: handler_template.rs  mod.rs  mod_template.rs
src/: app_state.rs  db.rs  lib.rs  main.rs  settings.rs
src/config/: mod.rs
src/http/: error.rs  mod.rs  response.rs  route_not_found.rs
src/http/articles/: create.rs  delete.rs  get.rs  list.rs  mod.rs
src/http/tickets/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/model/: ticket.rs
src/toolkit/: pagination.rs
src/utils/: mod.rs  pagination.rs
src/utils/jwt/: claims.rs  extract.rs  mod.rs
