[package]
name = "rustful-api"
authors = ["hjkl1"]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
categories = ["RESTful API", "Web"]
repository = "https://github.com/hjklchan/rustful-api"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-native-tls", "mysql", "chrono"]
