[package]
name = "rustful-api"
authors = ["hjkl1"]
version = "0.1.0"
edition = "2021"
categories = ["RESTful API", "Web"]
repository = "https://github.com/hjklchan/rustful-api"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-native-tls", "mysql", "chrono"]
